# g16

.github/workflows/: checks.yml
g16ckt/examples/: pairing_gate_counts.rs
g16ckt/src/circuit/modes/: execute_mode.rs
g16ckt/src/core/: gate.rs
g16ckt/src/gadgets/: basic.rs  groth16.rs  mod.rs
g16ckt/src/gadgets/bigint/: add.rs  cmp.rs
g16ckt/src/gadgets/bn254/: final_exponentiation.rs  fp254impl.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  g1.rs  g2.rs  pairing.rs
g16ckt/src/gadgets/hash/: blake3.rs
g16gen/: Cargo.toml
g16gen/src/: cache.rs  dummy_circuit.rs  main.rs  proof_setup.rs
g16gen/src/modes/: fanout_ctr.rs  translate.rs
g16gen/src/passes/: credits.rs  input_bits.rs  translation.rs
