[package]
name = "g16gen"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
ckt = { git = "https://github.com/alpenlabs/ckt", features = ["v5"] }
indicatif = "0.18.0"
lvl = { git = "https://github.com/alpenlabs/ckt"}
g16ckt = { path = "../g16ckt" }
tracing = "0.1.41"
rand = "0.8" # using old version for consistency with ark
rand_chacha = "0.3" # using old version for consistency with ark
tracing-subscriber = "0.3.20"
cynosure = { version = "0.3.0", default-features = false, features = ["ringbuf"] }
monoio = { version = "0.2.4", features = ["sync"] }
kanal = "0.1.1"
ark-groth16 = "0.5.0"
ark-bn254 = "0.5.0"